--- a/public/index.html
+++ b/public/index.html
@@ -4,43 +4,12 @@
   <meta charset="UTF-8">
   <title>Exam Status Dashboard</title>
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      margin: 20px; 
-      background: #f8f9fa;
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    table { 
-      width: 100%; 
-      border-collapse: collapse; 
-      margin-top: 20px; 
-      background: #fff;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-
-    th, td { 
-      padding: 12px; 
-      text-align: left; 
-      font-size: 15px;
-      border-bottom: 1px solid #ddd;
-    }
-
-    th { 
-      background-color: #343a40; 
-      color: #fff; 
-    }
-
-    /* STATUS COLORS */
-    .status { font-weight: bold; font-size: 14px; }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
+    th { background-color: #f4f4f4; }
+    .status { font-weight: bold; }
     .schedule { color: orange; }
     .ongoing { color: green; }
     .completed { color: blue; }
@@ -63,42 +32,23 @@
 </table>
 
 <script>
-  // ----------------------------
-  // CONFIG
-  // ----------------------------
   const baseURL = "https://dev.backend.shikshacart.com/api/v1/schooler/UsersExams";
-
   const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY5MWRkOThjNTQ3ZDg1MWU2MTc3MGRhMSIsImlhdCI6MTc2NDU3NDYxNSwiZXhwIjoxNzY0NjYxMDE1fQ.OAbZOPe7nq-9rhMmnH3z3QbTO8_2vuV4sBksDwkYmE4";
+  const examTableBody = document.querySelector("#examTable tbody");
 
-
-  // ----------------------------
-  // SOCKET.IO CONNECTION
-  // ----------------------------
   const socket = io("https://dev.backend.shikshacart.com", {
-    transports: ["websocket"],
-    reconnection: true,
-    reconnectionAttempts: Infinity,
-    reconnectionDelay: 2000
+    transports: ["websocket"]
   });
 
-  socket.on("connect", () => {
-    console.log("🔥 Socket Connected:", socket.id);
-  });
+  function cleanStatus(status) {
+    return status.toLowerCase().replace(/\s/g, '');
+  }
 
-  socket.on("disconnect", () => {
-    console.log("⚠️ Socket Disconnected");
-  });
-
-
-  // ----------------------------
-  // INITIAL FETCH: GET USER EXAMS
-  // ----------------------------
+  // Initial Fetch
   async function fetchExams() {
     try {
       const res = await fetch(baseURL, {
-        headers: {
-          "Authorization": "Bearer " + token
-        }
+        headers: { "Authorization": "Bearer " + token }
       });
 
       const exams = await res.json();
@@ -109,61 +59,51 @@
     }
   }
 
-
-  // ----------------------------
-  // TABLE RENDER FUNCTION
-  // ----------------------------
   function renderTable(exams) {
-    const examTableBody = document.querySelector("#examTable tbody");
     examTableBody.innerHTML = "";
 
     exams.forEach(exam => {
-      const tr = document.createElement("tr");
-      tr.id = "exam-" + exam._id;
+      createOrUpdateRow(exam._id, exam.examName, exam.statusManage);
+    });
+  }
+
+
+  // 🟩 MAIN FIX HERE
+  function createOrUpdateRow(examId, examName = "-", statusManage = "To Be Schedule") {
+    let tr = document.querySelector("#exam-" + examId);
+
+    // If row doesn't exist → create new row
+    if (!tr) {
+      tr = document.createElement("tr");
+      tr.id = "exam-" + examId;
 
       tr.innerHTML = `
-        <td>${exam._id}</td>
-        <td>${exam.examName ?? "-"}</td>
-        <td class="status ${cleanStatus(exam.statusManage)}">
-          ${exam.statusManage ?? "To Be Schedule"}
-        </td>
+        <td>${examId}</td>
+        <td>${examName || "-"}</td>
+        <td class="status ${cleanStatus(statusManage)}">${statusManage}</td>
       `;
 
       examTableBody.appendChild(tr);
-    });
+      return;
+    }
+
+    // Update existing row
+    const statusTd = tr.querySelector(".status");
+    statusTd.textContent = statusManage;
+    statusTd.className = "status " + cleanStatus(statusManage);
   }
 
 
-  // ----------------------------
-  // CLEAN STATUS NAME → CLASSNAME SAFE
-  // ----------------------------
-  function cleanStatus(status) {
-    return status ? status.toLowerCase().replace(/\s/g, "") : "tobeschedule";
-  }
-
-
-  // ----------------------------
-  // SOCKET LISTENER (REAL-TIME UPDATE)
-  // ----------------------------
+  // SOCKET LISTENER
   socket.on("examStatusUpdate", (data) => {
-    console.log("📡 Real-Time Update:", data);
+    console.log("Socket Update Received:", data);
 
     data.forEach(item => {
-      const tr = document.querySelector("#exam-" + item.examId);
-      if (!tr) return;
-
-      const statusTd = tr.querySelector(".status");
-      if (!statusTd) return;
-
-      statusTd.textContent = item.statusManage;
-      statusTd.className = "status " + cleanStatus(item.statusManage);
+      createOrUpdateRow(item.examId, "-", item.statusManage);
     });
   });
 
-
-  // ----------------------------
-  // LOAD INITIAL DATA
-  // ----------------------------
+  // Load initial data
   fetchExams();
 </script>
 
